[package]
name = "via"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
color-eyre = "0.6.2"
figment = { version = "0.10.8", features = ["test", "env", "toml"] }
open = "3.2.0"
serde = { version = "1.0.150", features = ["derive"] }
thiserror = "1.0.37"
